// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots object-list/Pagination default view 1`] = `
<div
  className="objectlist-pagination"
>
  <ul
    className="objectlist-pagination__pages"
  >
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        ← Previous
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        1
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      className="objectlist-pagination__page active"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        5
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        6
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        7
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        8
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        9
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        Next →
      </a>
    </li>
  </ul>
  <p
    className="text-muted"
  >
    <em>
      Showing page 3 of 9 out of 42 total buildings.
    </em>
  </p>
</div>
`;

exports[`Storyshots object-list/Pagination interactive 1`] = `
<div
  className="objectlist-pagination"
>
  <ul
    className="objectlist-pagination__pages"
  >
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        ← Previous
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      className="objectlist-pagination__page active"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        Next →
      </a>
    </li>
  </ul>
  <p
    className="text-muted"
  >
    <em>
      Showing page 3 of 9 out of 42 total buildings.
    </em>
  </p>
</div>
`;

exports[`Storyshots object-list/Pagination loading 1`] = `
<div
  className="objectlist-pagination"
>
  <ul
    className="objectlist-pagination__pages"
  >
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        ← Previous
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        2
      </a>
    </li>
    <li
      className="objectlist-pagination__page active"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        3
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        4
      </a>
    </li>
    <li
      className="objectlist-pagination__page"
      onClick={[Function]}
    >
      <a
        className="objectlist-pagination__page--link"
        href="#"
      >
        Next →
      </a>
    </li>
  </ul>
  <p
    className="text-muted"
  >
    <em>
      <i
        className="fas fa-circle-notch fa-spin"
      />
       Loading 
      buildings
       ...
    </em>
  </p>
</div>
`;
